Refactoring related to multimaps.